--- a/Wizchat/Views/Home/Index.cshtml
+++ b/Wizchat/Views/Home/Index.cshtml
@@ -3,4 +3,13 @@
 *@
 @{
 }
-Test
+<div class="container">
+    <div class="row">
+        <div class="col-sm-2">
+            <label class="control-label" for="usernamebox">User Name</label>
+        </div>
+        <div class="col-sm-2">
+            <input class="form-control" id="usernamebox" type="text" />
+        </div>
+    </div>
+</div>
