--- a/Wizchat/Views/Shared/_Layout.cshtml
+++ b/Wizchat/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width"/>
     <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet"/>
+    <link href="~/css/main.css" rel="stylesheet" />
     <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/lib/angular/angular.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
