--- a/Wizchat/Views/Home/Index.cshtml
+++ b/Wizchat/Views/Home/Index.cshtml
@@ -29,7 +29,31 @@
         <div class="col-md-6 panel">
             <div class="row">
                 <div class="col-md-12">
-                    <textarea class="messageDisplay center-block" rows="30" cols="70" disabled=""></textarea>
+                    <textarea class="messageDisplay center-block form-control" rows="30" cols="70" disabled=""></textarea>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <input type="text" class="form-control invisible" />
+                </div>
+                <div class="col-md-4">
+                    <label class="control-label" for="messagebox">
+                        Message
+                    </label>
+                </div>
+                <div class="col-md-6">
+                    <textarea class="messageDisplay center-block form-control" rows="15" cols="50" disabled=""></textarea>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <input type="text" class="form-control invisible" />
+                </div>
+                <div class="col-md-6">
+                    <button class="btn btn-primary center-block">Send</button>
+                </div>
+                <div class="col-md-6">
+                    <button class="btn btn-primary center-block">Logout</button>
                 </div>
             </div>
         </div>
