--- a/Wizchat/Views/Home/Index.cshtml
+++ b/Wizchat/Views/Home/Index.cshtml
@@ -36,6 +36,8 @@
                 <div class="col-md-12">
                     <input type="text" class="form-control invisible" />
                 </div>
+            </div>
+            <div class="row">
                 <div class="col-md-4">
                     <label class="control-label" for="messagebox">
                         Message
@@ -49,6 +51,8 @@
                 <div class="col-md-12">
                     <input type="text" class="form-control invisible" />
                 </div>
+            </div>
+            <div class="row">
                 <div class="col-md-6">
                     <button class="btn btn-primary center-block">Send</button>
                 </div>
