admin interface done

--- a/Wizchat/Views/Admin/Index.cshtml
+++ b/Wizchat/Views/Admin/Index.cshtml
@@ -1,7 +1,42 @@
 ﻿<div class="container">
     <div class="row">
         <div class="col-md-12">
-            <input type="text" class="form-control invisible" />
+            <input type="text" class="form-control invisible"/>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-3">
+            <label class="control-label" for="messagebox">
+                Online Users
+            </label>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-9">
+            <select class="center-block form-control" size="10">
+                <option>abc</option>
+                <option>abc</option>
+                <option>abc</option>
+                <option>abc</option>
+                <option>abc</option>
+                <option>abc</option>
+                <option>abc</option>
+                <option>abc</option>
+                <option>abc</option>
+                <option>abc</option>
+                <option>abc</option>
+                <option>abc</option>
+                <option>abc</option>
+                <option>abc</option>
+                <option>abc</option>
+                <option>abc</option>
+                <option>abc</option>
+            </select>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <input type="text" class="form-control invisible"/>
         </div>
     </div>
     <div class="row">
