--- a/Wizchat/Views/Shared/_Layout.cshtml
+++ b/Wizchat/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     <link href="~/css/main.css" rel="stylesheet" />
     <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/lib/angular/angular.js"></script>
+    <script src="~/lib/signalr/jquery.signalr.js"></script>
+    <script src="~/signalr/hubs"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
     <title>@ViewBag.Title</title>
 </head>
