--- a/Wizchat/Views/Admin/Index.cshtml
+++ b/Wizchat/Views/Admin/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="container">
+﻿<div class="container" ng-app="main">
     <div class="row">
         <div class="col-md-12">
             <input type="text" class="form-control invisible"/>
@@ -46,7 +46,7 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-            <input type="text" class="form-control invisible" />
+            <input type="text" class="form-control invisible"/>
         </div>
     </div>
     <div class="row">
@@ -61,7 +61,7 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-            <input type="text" class="form-control invisible" />
+            <input type="text" class="form-control invisible"/>
         </div>
     </div>
     <div class="row">
@@ -70,3 +70,5 @@
         </div>
     </div>
 </div>
+
+<script src="~/js/admin.js"></script>
