--- a/Wizchat/Views/Home/Index.cshtml
+++ b/Wizchat/Views/Home/Index.cshtml
@@ -27,9 +27,9 @@
         </div>
         <div class="col-md-1"></div>
         <div class="col-md-6 panel" ng-controller="sendmessage">
-            <div class="row">
+            <div class="row"  ng-controller="messagectrl">
                 <div class="col-md-12">
-                    <textarea class="messageDisplay center-block form-control" rows="30" cols="70" disabled=""></textarea>
+                    <textarea class="messageDisplay center-block form-control" rows="30" cols="70" ng-model="messageDisplay" disabled=""></textarea>
                 </div>
             </div>
             <div class="row">
@@ -37,7 +37,7 @@
                     <input type="text" class="form-control invisible" />
                 </div>
             </div>
-            <div class="row" >
+            <div class="row">
                 <div class="col-md-4">
                     <label class="control-label" for="messagebox">
                         Message
